--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,22 +74,24 @@
 .slider-bar {
   position: relative;
   height: 8px;
-  background: #ddd; 
+  background: #ddd;
   border-radius: 5px;
 }
 
 .slider-highlight {
   position: absolute;
   height: 8px;
-  background: #FF9F0D; 
+  background: #FF9F0D;
 }
+
 .range-input {
   position: absolute;
   -webkit-appearance: none;
   width: 100%;
   height: 8px;
   background: transparent;
-  pointer-events: none;
+  top: 0;
+  left: 0;
 }
 
 .range-input::-webkit-slider-thumb {
@@ -100,34 +102,29 @@
   background: #FF9F0D;
   border-radius: 50%;
   pointer-events: all;
-  border: 7px solid rgb(249, 244, 244) ;
+  border: 7px solid rgb(249, 244, 244);
   cursor: pointer;
-  margin-top: -18px;
-  display: flex;
-  justify-content: center;
-
 }
+
 .range-input::-moz-range-thumb {
   width: 20px;
   height: 20px;
-  background: #FF9F0D; 
+  background: #FF9F0D;
   border: none;
   border-radius: 50%;
   cursor: pointer;
- 
 }
 
 .slider-values {
   display: flex;
-  justify-content: center;
-  gap: 120px;
+  justify-content: space-between;
   margin-top: 10px;
 }
 
 .slider-values span {
   font-size: 14px;
   font-weight: bold;
-font-family: "playFairy";
+  font-family: "playFairy";
 }
 
 body {
