--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,6 +136,18 @@ body {
  
 }
 
+.sidebar {
+ position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  overflow: visible;
+  pointer-events: auto;
+  cursor: pointer;
+  user-select: auto;
+  touch-action: auto;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
